css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');

html,
body {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	font-family: 'Roboto';
	color: #446E58;
	overflow: hidden;
	position: relative;
}


/*-------------------------------*/


/*            TODO Console            */


/*-------------------------------*/

#console {
	position: absolute;
	width: 28%;
	top: 0;
	height: 50%;
	background-color: rgba(0, 0, 0, 0.7);
	color: white;
	z-index: 100;
	display: none;
/*
	flex-direction: column;
	justify-content: space-between;
	align-items: stretch;
*/
}


#close_console {
/*	padding: 3%;*/
	height: 10%;
	background-color: rgba(171, 171, 171, 0.8);
}


#close_console img {
/*	padding: 2% 5% 0 0;*/
	width: 10%;
/*	float: right;*/
/*	display: none;*/
}

#console ul {
	color: white;
	display: block;
	font-size: 0.8em;
	height: auto;
	background-color: transparent;
	padding-left: 20px;
}

#console li {
	list-style-type: none;
	border: none;
}

.reperer {
	margin: 0;
	padding: 15px 10px;
	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
	border-top: 1px solid rgba(0, 0, 0, 0.1);
}

#close_console p {
	float: right;
	background-color: rgba(255, 0, 0, 0.6);
	border-radius: 50%;
	padding: 5%;
}

.black {
	height: 80%;
	width: 100%;
	overflow-y: scroll;
}


/*-------------------------------*/


/*          Fin console          */


/*-------------------------------*/


/*pop up de batiments*/

#ajout_batiment {
	text-align: center;
}

#ajout_batiment img {
	width: 30%;
	padding: 5%;
	margin: auto;
	display: block;
}

.fin {
	z-index: 1000;
	position: absolute;
	background-color: rgba(255, 255, 255, 0.9);
	text-align: center;
	width: 60%;
	min-height: 60%;
	margin-top: 10%;
	margin-left: 10%;
	display: none;
}

#map {
	width: 100%;
	height: 100%;
	display: inline-block;
	vertical-align: top;
	overflow: hidden;
	position: relative;
}

.settings {
	width: 100%;
	display: inline-block;
	vertical-align: top;
}

.settings h1 {
	padding-left: 45px;
	text-align: center;
}

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
	background: transparent;
	text-align: center;
	box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
}

.text {
	background: transparent;
	text-align: center;
	box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
}

.hide {
	display: none;
}

.show {
	display: block;
}

.align {
	display: inline-block;
}

.pop_up_inv {
	height: 50%;
	margin-left: 15%;
	margin-top: 5%;
	z-index: 1000;
	position: absolute;
	width: 70%;
}

.pop_up_inv2 {
	height: 50%;
	margin-right: auto;
	margin-left: 15%;
	margin-top: 5%;
	z-index: 1000;
	position: absolute;
	width: 70%;
}

.simulation {
	z-index: 1000;
	padding: 5%;
	bottom: 0;
	background-color: transparent;
	text-align: center;
}

@keyframes animation {
	from {
		opacity: 0.5;
	}
	50% {
		opacity: 1;
	}
	to {
		opacity: 0.5;
	}
}

.anim {
	animation-name: animation;
	animation-duration: 2s;
	animation-delay: 2s;
	animation-iteration-count: infinite;
}

.deleteUltim {
	font-family: Arial;
	color: #ffffff;
	font-size: 30px;
	padding: 20px 50px 20px 50px;
	*/ text-decoration: none;
	margin-top: 200px;
	margin-left: 5%f;
	margin border-right: 5%;
}

#simulation {
	display: none;
}

#timer {
	font-size: 180%;
	position: fixed;
	font-family: 'Roboto-Bold', sans-serif;
	color: #446e58;
	top: 30px;
	right: 90px;
	background-color: #17201C;
	border-style: solid;
	border-width: 2px;
	border-radius: 5px;
	border-color: #446e58;
	transition: 0.5s linear;
    padding: 0px 5px 0px 5px;
}

.timer {
	position: relative;
	top: 120px;
}

#timerbtn {
	position: relative;
	top: -140px;
}

#delete {
	background-color: white;
	margin-top: -15px;
}

.pop_up {
	z-index: 1000;
	padding-bottom: 5%;
	background-color: rgba(255, 255, 255, 0.5);
	width: 100%;
	min-height: 100%;
}

.pop {
	height: 100%;
	z-index: 1000;
	position: absolute;
	width: 80%;
	background-color: rgba(0, 0, 0, 0.2);
	margin: 0;
	padding: 0;
}

#toolbar {
	position: relative;
	bottom: 13%;
	left: 20%;
	width: 6%;
	display: -webkit-inline-box;
}

.profondeur {
	pointer-events: none;
	color: #757575;
	font-family: 'Roboto', sans-serif;
}

/*STYLE DES CLASSES DE PROFONDEURS (coords.js)*/

/*
.profondeur-rouge {
	pointer-events: none;
	color: #C62828;
	font-family: 'Roboto', sans-serif;
}

.profondeur-orange {
	pointer-events: none;
	color: #EF6C00;
	font-family: 'Roboto', sans-serif;
}

.profondeur-jaune {
	pointer-events: none;
	color: #FBC02D;
	font-family: 'Roboto', sans-serif;
}

.profondeur-vert {
	pointer-events: none;
	color: #2E7D32;
	font-family: 'Roboto', sans-serif;
}

.profondeur-bleu {
	pointer-events: none;
	color: #01579B;
	font-family: 'Roboto', sans-serif;
}
*/

/* END */

.port {
	pointer-events: none;
}

.phare {
	pointer-events: none;
}

.stop {
	position: absolute;
	top: 25%;
	left: 1%;
	width: 4%;
}

.forme {
	padding: 10%;
}

.batiment {
	padding: 10%;
}

#toolbar img {
	width: 100%;
}

.pop_up {
	text-align: center;
}

.big_btn {
	z-index: 500;
	position: absolute;
	bottom: -120px;
	width: 20%;
	left: 30%;
	min-height: 30px;
	max-height: auto;
	text-align: center;
	border-radius: 10px;
	margin-left: 10%;
	touch-action: none;
}

#cont {
	width: 200px;
	height: 100%;
}

.liste {
	list-style-type: none;
}

.onglet2 {
	background: white;
	margin-left: 1%;
	margin-right: 1%;
	height: 60%;
}

.onglet1 {
	background: white;
	margin-left: 1%;
	margin-right: 1%;
}

.options {
	color: black
}

.options_cont {
	margin-top: 20px
}

.vitesse {
	height: 100%;
	width: 10px;
	display: inline-block;
	margin-top: auto;
	margin-bottom: auto;
}

.time {
	height: 40px;
	font-family: "Bebas";
	color: #004080;
	text-shadow: 1px 1px #ffffff;
}

.timer_number_titles {
	height: 10px;
	color: #ffffff;
	font-size: 9px;
	text-shadow: 1px 1px #ffffff;
}

.timer_number_days,
.timer_number_hours,
.timer_number_mins {
	float: left;
	margin-left: 40px;
}

.timer_number_hours {
	margin-left: 21px;
}

.timer_number_mins {
	margin-left: 21px;
}
/* ... */

